--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -21,11 +21,11 @@ body {
   display: flex;
   align-items: center;
   background-image: linear-gradient(
-          135deg,
-          rgb(24, 42, 115) 0%,
-          rgb(33, 138, 174) 69%,
-          rgb(32, 167, 172) 89%
-  ) !important;
+    135deg,
+    rgb(24, 42, 115, 0),
+    rgb(33, 138, 174, 0.7),
+    rgb(32, 167, 172, 9)), 
+    url('/assets/motoguzi\ aniversary.jpeg') !important;
   height: 100vh;
 }
 
@@ -42,7 +42,11 @@ body {
 .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
+  
 }
 
-/*end home page styles*/
+
+/*end of basic styles*/
+
+/* subnavbar for mobile view */
 
