--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -21,11 +21,12 @@ body {
   display: flex;
   align-items: center;
   background-image: linear-gradient(
-    135deg,
-    rgb(24, 42, 115, 0),
-    rgb(33, 138, 174, 0.7),
-    rgb(32, 167, 172, 9)), 
-    url('/assets/motoguzi\ aniversary.jpeg') !important;
+      135deg,
+      rgb(24, 42, 115, 0),
+      rgb(33, 138, 174, 0.7),
+      rgb(32, 167, 172, 9)
+    ),
+    url("/assets/motoguzi\ aniversary.jpeg") !important;
   height: 100vh;
 }
 
@@ -42,9 +43,7 @@ body {
 .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
-  
 }
-
 
 /*end of basic styles*/
 
@@ -52,10 +51,9 @@ body {
 .react-datepicker-wrapper,
 .react-datepicker__input-container,
 .react-datepicker__input-container input {
-    /* display: block; */
-    width: 70px;
-   border: none;
-   
+  /* display: block; */
+  width: 70px;
+  border: none;
 }
 
 /* .datePicker {
@@ -68,6 +66,13 @@ body {
   background-color: red;
 } */
 
+/* scrollable details style */
+.sideScroll {
+  overflow-y: scroll;
+  float: left;
+  height: 90vh;
+  position: relative;
+}
 
 /* Classes for mobile messages */
 
@@ -88,19 +93,16 @@ body {
     /* background-color: blue; */
   }
   .btnview_hide {
-   display: none;
+    display: none;
   }
-   .btnview_show {
+  .btnview_show {
     /* width: fit-content; */
     display: none;
   }
 }
-@media only screen and (min-width:767px) {
-
+@media only screen and (min-width: 767px) {
   .btnview_show {
-   
     display: none;
     /* background-color: blue; */
   }
- 
 }
