--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -1,16 +1,13 @@
 /* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Jost&display=swap'); */
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 body {
   background-color: rgb(234, 234, 234) !important;
   /* font-family: 'Josefin Sans', cursive; */
   /* font-family: 'Jost', sans-serif; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-
-
 
 .ui.inverted.top.fixed.menu {
   background-image: linear-gradient(
@@ -77,19 +74,40 @@ body {
 } */
 
 /* scrollable details style */
+/* :hover */
 .sideScroll {
-  overflow-y: scroll;
+  overflow-y: auto;
   float: left;
-  height: 90vh;
+  height: 80vh;
+  /* width: '100%'; */
   position: relative;
+  /* scroll-behavior: 'revert' */
+  /* display: flex;
+  flex-direction: column-reverse; */
+  /* color: inherit; */
 }
+.scrollRevert  {
+  overflow-y: auto;
+  float: left;
+  height: 80vh;
+  position: relative;
+  display: flex; 
+  flex-direction: column-reverse;
+}
+
+/* #test {
+  
+}
+
+#test :hover, #test:active, #test:focus {
+  overflow-y: auto;
+} */
 
 /* header link styles for listItems */
 a {
   color: inherit; /* blue colors for links too */
   text-decoration: inherit; /* no underline */
 }
-
 
 /* Classes for mobile messages */
 
