Diary Mobile Filters Fix SmallModal

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -97,9 +97,9 @@ body {
 
 
 
-#test :hover, #test:active, #test:focus {
+/* #test :hover, #test:active, #test:focus {
   overflow-y: auto;
-} */
+}  */
 
 /* header link styles for listItems */
 a {
