--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -105,7 +105,7 @@ body {
 }
 
 
-
+/* PLACEHOLDER (Private messages but also forms) */
 ::-webkit-input-placeholder {
   color: gray;
   text-align: center;
