--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -189,3 +189,21 @@ a {
 .ui.menu .ui.dropdown .menu>.item>.messagesDropdown{
   background-color: darkgoldenrod;
 } */
+
+.picker-container {
+  position: relative;
+  width: 300px;
+}
+.emoji-icon {
+  cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 5px;
+}
+.input-style {
+  padding: 7px 30px 7px 10px;
+  width: calc(100% - 40px);
+  border-radius: 3px;
+  border: 1px solid #999;
+  margin-bottom: 10px;
+}
