--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -208,3 +208,14 @@ a {
   border: 1px solid #999;
   margin-bottom: 10px;
 }
+
+/* User Online */
+@keyframes fa-blink {
+  0% {opacity: 1;}
+  100% {opacity: 0.4;}
+}
+
+.isOnline {
+  animation: fa-blink 1.5s linear infinite;
+  color: rgb(1, 189, 42);
+}
