--- a/client-app/src/features/nav/Navbar.css
+++ b/client-app/src/features/nav/Navbar.css
@@ -39,7 +39,8 @@ By @betoayesa.
   .hamburger span {
     display: block;
     height: 3px;
-    background: #000;
+    background: white;
+    /* background: #000; */
     margin: 0 0 3px;
   }
   .hamburger:hover {
