--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -20,8 +20,6 @@ body {
   background-color: rgb(75, 83, 95) !important;
 }
 
-
-
 /*end of basic styles*/
 
 /* datepicker mobile*/
@@ -112,7 +110,6 @@ a {
   }
 }
 
-
 .picker-container {
   position: relative;
   width: 300px;
@@ -122,7 +119,6 @@ a {
   display: flex;
   justify-content: center;
   font-size: larger;
- 
 }
 .input-style {
   padding: 7px 30px 7px 10px;
@@ -182,7 +178,6 @@ a {
   font-size: 16px;
 }
 
-
 @media only screen and (max-width: 767px) {
   .send-button,
   .smiley-picker {
@@ -195,7 +190,7 @@ a {
     height: 1.5rem;
     max-width: 98%;
   }
-  .scrollRevert{
+  .scrollRevert {
     height: 75vh;
   }
 
@@ -205,4 +200,31 @@ a {
     right: 7px;
     height: 100%;
   }
+}
+
+/* admin button styles */
+
+.admin-button-container {
+  display: flex  !important;
+  flex-direction: column !important;
+  justify-content: space-around !important;
+}
+.admin-button {
+  /* text-align: center; */
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+  margin-top: 2px !important;
+  margin-bottom: 20px !important;
+  box-shadow: 2px 6px 4px #e5e3e3 !important;
+  border: .5px solid gray !important;
+}
+.action-button-container {
+  display: flex  !important;
+  /* flex-direction: row !important; */
+  justify-content: space-around !important;
+}
+.action-button {
+  box-shadow: 2px 6px 4px #e5e3e3 !important;
+  border: .5px solid gray !important;
+  width: 14rem;
 }
